--- a/style.css
+++ b/style.css
@@ -1,55 +1,53 @@
-*{
+* {
     margin: 0;
     padding: 0;
-}
-
-
-.body{
+  }
+  
+  .body {
     display: flex;
-
-}
-.part-one{
+    flex-direction: row;
+  }
+  .part-one {
     height: 615px;
     width: 650px;
-    background-color:rgb(207, 231, 253);
+    background-color: rgb(207, 231, 253);
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-.part-tow{
+  }
+  .part-tow {
     height: 615px;
     width: 700px;
-    background-color:rgb(231, 231, 231);
+    background-color: rgb(231, 231, 231);
     display: flex;
     align-items: center;
-}
-.mahdi{
+  }
+  .mahdi {
     height: 230px;
     width: 230px;
     margin-top: 100px;
     margin-bottom: 10px;
     background-image: url(mahdi.jpg);
     background-size: cover;
-}
-.my-self{
+  }
+  .my-self {
     height: 250px;
     width: 230px;
-}
-h2{
+  }
+  h2 {
     font-family: sans-serif;
     font-weight: 700;
-    
-}
-.my-self{
+  }
+  .my-self {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-.self{
+  }
+  .self {
     font-family: sans-serif;
     margin-top: 10px;
-}
-.email{
+  }
+  .email {
     height: 40px;
     width: 230px;
     margin-top: 10px;
@@ -57,14 +55,14 @@ h2{
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.mail{
+  }
+  .mail {
     color: rgb(192, 192, 192);
     font-size: 11px;
     font-family: sans-serif;
     font-weight: 700;
-}
-.id{
+  }
+  .id {
     height: 40px;
     width: 230px;
     margin-top: 30px;
@@ -72,22 +70,22 @@ h2{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-}
-.about{
+  }
+  .about {
     height: 400px;
     width: 500px;
     margin-left: 50px;
-}
-h1{
+  }
+  h1 {
     font-family: sans-serif;
-}
-p{
+  }
+  p {
     margin-top: 10px;
-   font-family: sans-serif;
-   line-height: 22px;
-   color: rgb(58, 58, 58);
-} 
-.resume{
+    font-family: sans-serif;
+    line-height: 22px;
+    color: rgb(58, 58, 58);
+  }
+  .resume {
     height: 40px;
     width: 230px;
     margin-top: 180px;
@@ -96,20 +94,18 @@ p{
     display: flex;
     justify-content: center;
     align-items: center;
-    
-}
-.git{
-    font-family:sans-serif;
+  }
+  .git {
+    font-family: sans-serif;
     font-size: 11px;
-    
-}
-.link{
+  }
+  .link {
     height: 50px;
     width: 500px;
-   display: flex;
-   justify-content: space-between;
-}
-.portfolio{
+    display: flex;
+    justify-content: space-between;
+  }
+  .portfolio {
     height: 40px;
     width: 230px;
     margin-top: 180px;
@@ -118,9 +114,16 @@ p{
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.fb{
-    font-family:sans-serif;
+  }
+  .fb {
+    font-family: sans-serif;
     font-size: 11px;
     text-decoration: none;
-}
+  }
+  
+  @media screen and (max-width: 767px) {
+    .body {
+      display: flex;
+      flex-direction: column;
+    }
+  }
